Add leetcode 172